--- a/CSS/Forgot.css
+++ b/CSS/Forgot.css
@@ -82,7 +82,7 @@
   /* media query */
   @media screen and (max-width: 700px) {
     .container {
-      flex-direction: column;
+      flex-direction: column-reverse;
       
     }
     .left{
