--- a/CSS/LogIn.css
+++ b/CSS/LogIn.css
@@ -9,30 +9,22 @@ a{
     text-decoration: none;
 }
 .login-section .login-container{
-    width: 93% !important;
+    width: 92% !important;
+    height: 123vh !important;
 }
 .login-image-wrapper{
     width: 45% !important;
-    background-color: #CAF0F8;
+    height: 100% !important;
+    margin-left: 1rem !important;
+    margin-block: 1rem !important;
 }
-.login-image-wrapper .first-wrapper{
-    width: 90% !important;
-    margin-inline: auto !important;
-    height: 90% !important;
-    margin-top: 2.5rem !important;
-    display: flex;
-    justify-content: center;
-}
-.login-image-wrapper img{ 
-    border: 7px solid #0F0E0E;
-    outline: 10px solid #0077B6;
+.login-image-wrapper img{
+    height: 102% !important;
 }
 .login-content{
-    margin-top: -4rem !important;
     width: 45% !important;
-}
-.login-content h1{
-    margin-top: -6rem !important;
+    margin-top: 3rem !important;
+    height: 100% !important;
 }
 .login-btn{
     background-color: #0077B6;
@@ -45,45 +37,43 @@ a{
     color: 00B4D8;
     text-decoration: none;
 }
-
+.login-options{
+    position: relative;
+    margin-bottom: 3rem !important;
+}
+.login-content hr{
+    border : 2px solid #A7A4A4;
+}
+.login-content h2{
+    background-color: white !important;
+    padding-inline: 1rem !important;
+    color:  #A7A4A4;
+    position: absolute;
+    top: -50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 .login-btn-wrapper button{
-    border: 1px solid #0077B6;
-    padding-block: 0.75rem !important;
+    border: 1px solid #0077B6 !important;
+    padding-block: 0.5rem !important;
+    padding-inline: 0.75rem !important;
 }
-@media only screen and (max-width: 900px){
-    .login-image-wrapper img{
-        width: 80% !important;
-    }
-}
-@media only screen and (max-width: 500px){
-    .login-image-wrapper img{
+@media only screen and (max-width: 820px){
+    .login-content .top-p{
         width: 90% !important;
     }
-    .login-section .login-container{
-        width: 100% !important;
-        display: flex;
-        justify-content: space-between !important;
-    }
-    .login-image-wrapper{
-        width: 50% !important;
+}
+@media only screen and (max-width: 490px){
+    .login-content .top-p{
+        width: 90% !important;
     }
 }
-@media only screen and (max-width: 360px) {
-    .login-section .login-container{
-        width: 100% !important;
-        display: flex;
-        gap: 3rem !important;
-        justify-content: space-between !important;
-    }
-    .login-image-wrapper{
-        width: 50% !important;
-    }
-    .login-image-wrapper img{
-        width: 100% !important;
-        opacity: 0;
-    }
+@media only screen and (max-width: 370px){
     .login-content{
-        width: 60% !important;
+        height: 100% !important;
+    }
+    .login-options{
+        margin-block: 3rem !important;
     }
 }
 /* input:invalid {
