--- a/CSS/SignUp.css
+++ b/CSS/SignUp.css
@@ -24,20 +24,15 @@ img{
     height: 50vh;
     align-items: center;
     justify-content: center; */
-    width: 400px;
-    height: 450px;
-    margin-top: 22rem;
-    margin-left: 4rem;
-    margin-right: 5rem;
+    width: 100%;
+    height: 100%;
+    margin: 0.5rem;
+    
+    /* margin-top: 22rem;
+    margin-right: 5rem; */
 }
-.signup-img{
-    background-color: #CAF0F8;
-    margin-top: 0.5rem;
-   
-}
-
 .form{
-    margin: 0.8rem;
+    margin-left: 4rem;
 }
 .form img{
     width: 20%;
@@ -47,7 +42,7 @@ img{
 }
 .get{
     text-align: center ;
-    margin-right: 6rem;
+    margin-right: 10rem;
 }
 .get h1{
     margin-top: 1.5rem;
@@ -57,16 +52,18 @@ img{
 }
 .get p{
     margin-bottom: 1.5rem;
-    font-size: 0.8rem;
+    font-size: 0.95rem;
     font-weight: 400;
 }
+
 .form-input{
     margin-left: 2rem;
     font-size: 0.8rem;
 }
 .form-input p{
     margin-left: 0.8rem;
-    font-size: 0.8rem;
+    font-size: 0.95rem;
+    font-weight: 400;
 }
 .form-input input{
     margin: 0.8rem;
@@ -95,6 +92,9 @@ img{
     margin-left: 2rem;
     font-size: 0.8rem;
 }
+.already-1{
+    margin-right: 5rem;
+}
 .already{
     text-align: center;
     margin: 0.8rem;
@@ -108,30 +108,211 @@ img{
     opacity: 200;
     color: #0b667c;
 }
-.already h1{
-    margin-top: 0.8rem;
-    text-align: center;
+#hr-line{
+   /* margin: 100px, auto; */
+   text-align: center;
+   position: relative;
+   margin-right: 5rem;
+   
 }
-.sign-with a{
-    padding: 0;
-    
+#hr-line:before {
+    content: "";
+    display: block;
+    width: 177px;
+    height: 1px;
+    background-color: #A7A4A4;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    z-index: -2;
+}
+#hr-line:after {
+    content: "";
+    display: block;
+    width: 177px;
+    height: 1px;
+    background-color: #A7A4A4;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    z-index: -2;
+}
+#hr-line span{
+    background: transparent;
+    color: #A7A4A4;
+}
+.sign-with {
+    display: flex;
+    margin-left: 7.8rem;
 }
 .sign-with button{
     margin: 1rem;
-    width: 25rem;
-    height: 3rem;
+    width: 3.5rem;
+    height: 2rem;
     border: 1px solid #0077B6;
     border-radius: 0.5rem;
     background-color: transparent;
     font-size: 0.8rem;
-    padding: 1rem;
+    justify-content: center;
 }
-/* .sign-with img{
-    width: 5%;
+.sign-with button:hover{
+    background-color: #e6f4f7;
+}
+.sign-with img{
+    width: 1.5vw;
     height: 3vh;
     margin-right: 0.5rem;
-} */
+    margin-top: 0.4rem;
+}
 .fa-brands{
    color: #0077B6;
-   margin-right: 1rem;
+   font-size: 1rem;
+}
+
+@media screen and (max-width: 500px){
+    .signup{
+        display: flex;
+        flex-direction: row;
+        margin: 0;
+    }
+    img{
+        /* width: 100%;
+        height: 50vh;
+        align-items: center;
+        justify-content: center; */
+        width: 0%;
+        height: 0%;
+        /* margin: 0.5rem; */
+        
+        /* margin-top: 22rem;
+        margin-right: 5rem; */
+    }
+    .form{
+        margin-left: rem;
+    }
+    .get{
+        text-align: center ;
+        margin-right: 3rem;
+    }
+    .get h1{
+        margin-top: 1.5rem;
+        margin-bottom: 1rem;
+        font-size: 1.5rem;
+        font-weight: 400;
+    }
+    .get p{
+        margin-bottom: 1.5rem;
+        font-size: 0.65rem;
+        font-weight: 400;
+    }
+    
+    .form-input{
+        margin-left: rem;
+        font-size: 0.5rem;
+    }
+    .form-input p{
+        margin-left: 0.5rem;
+        font-size: 0.65rem;
+        font-weight: 400;
+    }
+    .form-input input{
+        margin: 0.rem;
+        width: 15rem;
+        height: 2rem;
+        font-size: 0.5rem;
+    }
+    
+    .form-input select{
+        margin: 0.rem;
+        width: 15rem;
+        height: 2rem;
+        font-size: 0.5rem;
+    }
+    #submit{
+        background-color: #0077B6;
+        border: 1px solid #0077B6;
+        color: #F5F0F6;
+    }
+    #submit:hover{
+        background-color: #0b667c;
+    }
+    
+    .signup-with {
+        justify-content: center;
+        margin-right: rem;
+        font-size: 0.5rem;
+    }
+    .already a{
+        color: #00B4D8;
+        text-decoration: none;
+        font-size: 0.5rem;
+    }
+    .already a:hover{
+        opacity: 200;
+        color: #0b667c;
+    }
+    .already h1{
+        margin-top: 0.8rem;
+        
+    }
+    #hr-line{
+       /* margin: 100px, auto; */
+       text-align: center;
+       position: relative;
+       margin-right: 1rem;
+       
+    }
+    #hr-line:before {
+        content: "";
+        display: block;
+        width: 100px;
+        height: 1px;
+        background-color: #A7A4A4;
+        position: absolute;
+        left: 0;
+        top: 50%;
+        z-index: -2;
+    }
+    #hr-line:after {
+        content: "";
+        display: block;
+        width: 100px;
+        height: 1px;
+        background-color: #A7A4A4;
+        position: absolute;
+        right: 0;
+        top: 50%;
+        z-index: -2;
+    }
+    #hr-line span{
+        background: transparent;
+        color: #A7A4A4;
+    }
+    .sign-with {
+        display: flex;
+        margin-right: rem;
+    }
+    .sign-with button{
+        margin: 1rem;
+        width: 3rem;
+        height: 2rem;
+        border: 1px solid #0077B6;
+        border-radius: 0.5rem;
+        background-color: transparent;
+        font-size: 0.5rem;
+
+    }
+    .sign-with button:hover{
+        background-color: #e6f4f7;
+    }
+    .sign-with img{
+        width: 1.5vw;
+        height: 3vh;
+        margin-right: 0.5rem;
+        margin-top: 0.4rem;
+    }
+    .fa-brands{
+       color: #0077B6;
+       font-size: 1rem;
+}
 }
