--- a/CSS/SignUp.css
+++ b/CSS/SignUp.css
@@ -1,137 +1,131 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: 0;
-    color: #0F0E0E;
-    font-family: 'Lato', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+* {
+	margin: 0 !important;
+	padding: 0 !important;
+	box-sizing: border-box;
+	font-family: "Lato", sans-serif;
 }
-a{
-    text-decoration: none;
-    font-size: 0.8rem;
+a {
+	text-decoration: none;
 }
-.signup{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 0;
-    padding-top: 0;
-    text-align: left;
+.signup-section .signup-container {
+	width: 92% !important;
+	height: 123vh !important;
 }
-img{
-    /* width: 100%;
-    height: 50vh;
-    align-items: center;
-    justify-content: center; */
-    width: 400px;
-    height: 450px;
-    margin-top: 22rem;
-    margin-left: 4rem;
-    margin-right: 5rem;
+.signup-image-wrapper {
+	width: 45% !important;
+	height: 160% !important;
+	margin-left: 1rem !important;
+	margin-block: 1rem !important;
 }
-.signup-img{
-    background-color: #CAF0F8;
-    margin-top: 0.5rem;
-   
+.signup-image-wrapper img {
+	height: 100% !important;
+}
+.signup-content {
+	width: 45% !important;
+	margin-top: 3rem !important;
+	height: 100% !important;
 }
 
-.form{
-    margin: 0.8rem;
+.signup-btn {
+	background-color: #0077b6;
+	border-radius: 0;
 }
-.form img{
-    width: 20%;
-    height: 10vh;
-    margin-top: 0;
-    padding-top: 0;
+.signup-btn:hover {
+	background-color: #0077b6;
 }
-.get{
-    text-align: center ;
-    margin-right: 6rem;
+.reset-a {
+	color: 00B4D8;
+	text-decoration: none;
 }
-.get h1{
-    margin-top: 1.5rem;
-    margin-bottom: 1rem;
-    font-size: 2.5rem;
-    font-weight: 400;
+.signup-options {
+	position: relative;
+	margin-bottom: 3rem !important;
 }
-.get p{
-    margin-bottom: 1.5rem;
-    font-size: 0.8rem;
-    font-weight: 400;
+.signup-content hr {
+	border: 2px solid #a7a4a4;
 }
-.form-input{
-    margin-left: 2rem;
-    font-size: 0.8rem;
+.signup-content h2 {
+	background-color: white !important;
+	padding-inline: 1rem !important;
+	color: #a7a4a4;
+	position: absolute;
+	top: -50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
-.form-input p{
-    margin-left: 0.8rem;
-    font-size: 0.8rem;
+.signup-btn-wrapper button {
+	border: 1px solid #0077b6 !important;
+	padding-block: 0.5rem !important;
+	padding-inline: 0.75rem !important;
 }
-.form-input input{
-    margin: 0.8rem;
-    width: 25rem;
-    height: 2.5rem;
-    font-size: 0.8rem;
+@media only screen and (max-width: 912px) {
+	.signup-image-wrapper img {
+		height: 50% !important;
+	}
+}
+@media only screen and (max-width: 820px) {
+	.signup-content .top-p {
+		width: 90% !important;
+	}
+	.signup-image-wrapper img {
+		height: 60% !important;
+	}
+}
+@media only screen and (max-width: 768px) {
+	.signup-image-wrapper img {
+		height: 65% !important;
+	}
+}
+@media only screen and (max-width: 540px) {
+	.signup-image-wrapper img {
+		height: 90% !important;
+	}
+}
+@media only screen and (max-width: 490px) {
+	.signup-image-wrapper img {
+		height: 90% !important;
+	}
+	.signup-content .top-p {
+		width: 90% !important;
+	}
+	.signup-btn-wrapper {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 1rem !important;
+	}
+}
+@media only screen and (max-width: 375px) {
+	.signup-image-wrapper img{
+		height: 105% !important;
+	}
+	.signup-content {
+		height: 100% !important;
+	}
+	.signup-options {
+		margin-block: 3rem !important;
+	}
+	.signup-btn-wrapper {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 1rem !important;
+	}
+}
+@media only screen and (max-width: 360px) {
+	.signup-image-wrapper img {
+		height: 95% !important;
+	}
+}
+@media only screen and (max-width: 280px) {
+	.signup-image-wrapper img {
+		height: 120% !important;
+	}
 }
 
-.form-input select{
-    margin: 0.8rem;
-    width: 25rem;
-    height: 2.5rem;
-    font-size: 0.8rem;
-}
-#submit{
-    background-color: #0077B6;
-    border: 1px solid #0077B6;
-    color: #F5F0F6;
-}
-#submit:hover{
-    background-color: #0b667c;
-}
-
-.signup-with{
-    justify-content: center;
-    margin-left: 2rem;
-    font-size: 0.8rem;
-}
-.already{
-    text-align: center;
-    margin: 0.8rem;
-    margin-right: 10rem;
-}
-.already a{
-    color: #00B4D8;
-    text-decoration: none;
-}
-.already a:hover{
-    opacity: 200;
-    color: #0b667c;
-}
-.already h1{
-    margin-top: 0.8rem;
-    text-align: center;
-}
-.sign-with a{
-    padding: 0;
-    
-}
-.sign-with button{
-    margin: 1rem;
-    width: 25rem;
-    height: 3rem;
-    border: 1px solid #0077B6;
-    border-radius: 0.5rem;
-    background-color: transparent;
-    font-size: 0.8rem;
-    padding: 1rem;
-}
-/* .sign-with img{
-    width: 5%;
-    height: 3vh;
-    margin-right: 0.5rem;
+/* input:invalid {
+    border: 1px solid red;
 } */
-.fa-brands{
-   color: #0077B6;
-   margin-right: 1rem;
-}
+
+
+
+
