--- a/CSS/Payment.css
+++ b/CSS/Payment.css
@@ -1,123 +1,50 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 * {
-	margin: 0 !important;
-	padding: 0 !important;
-	box-sizing: border-box;
-	font-family: "Lato", sans-serif;
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+}
+.navbar{
+    font-family: 'Open Sans', sans-serif;
+    background-color: #EFECEF;
+}
+.navbar-brand img{
+    width: 75% !important;
+    height: 6rem !important;
+}
+.navbar .nav-link{
+    color: #0F0E0E !important;
+}
+
+.payment-hero {
+    height: 90vh !important;
+    background: url(../Images/payment.png) lightgray 50% center/ cover no-repeat ;
+    background-attachment: fixed;
 }
 a {
+    text-decoration: none;
 }
-.signup-section .signup-container {
-	width: 92% !important;
-	height: 123vh !important;
+.payment-sec1{
+    font-family: 'Lato', sans-serif;
 }
-.signup-image-wrapper {
-	width: 45% !important;
-	height: 160% !important;
-	margin-left: 1rem !important;
-	margin-block: 1rem !important;
+.payment-container{
+    width: 90%;
+    margin-inline: auto !important;
 }
-.signup-image-wrapper img {
-	height: 100% !important;
+.btn-div button{
+    background-color: #F1EDED;
 }
-.signup-content {
-	width: 45% !important;
-	margin-top: 3rem !important;
-	height: 100% !important;
+.btn-div button:hover{
+    color: #FFFDFD !important;
+    background-color: #00B4D8;
 }
-
-
-.signup-btn {
-	background-color: #0077b6;
-	border-radius: 0;
+.btn-div a:hover{
+    color: #FFFDFD !important;
 }
-.signup-btn:hover {
-	background-color: #0077b6;
-}
-.reset-a {
-	color: 00B4D8;
-	text-decoration: none;
-}
-.signup-options {
-	position: relative;
-	margin-bottom: 3rem !important;
-}
-.signup-content hr {
-	border: 2px solid #a7a4a4;
-}
-.signup-content h2 {
-	background-color: white !important;
-	padding-inline: 1rem !important;
-	color: #a7a4a4;
-	position: absolute;
-	top: -50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-.signup-btn-wrapper button {
-	border: 1px solid #0077b6 !important;
-	padding-block: 0.5rem !important;
-	padding-inline: 0.75rem !important;
-}
-@media only screen and (max-width: 912px) {
-	.signup-image-wrapper img {
-		height: 50% !important;
-	}
-}
-@media only screen and (max-width: 820px) {
-	.signup-content .top-p {
-		width: 90% !important;
-	}
-	.signup-image-wrapper img {
-		height: 60% !important;
-	}
-}
-@media only screen and (max-width: 768px) {
-	.signup-image-wrapper img {
-		height: 65% !important;
-	}
-}
-@media only screen and (max-width: 540px) {
-	.signup-image-wrapper img {
-		height: 90% !important;
-	}
-}
-@media only screen and (max-width: 490px) {
-	.signup-image-wrapper img {
-		height: 90% !important;
-	}
-	.signup-content .top-p {
-		width: 90% !important;
-	}
-	.signup-btn-wrapper {
-		display: flex;
-		flex-wrap: wrap;
-		gap: 1rem !important;
-	}
-}
-@media only screen and (max-width: 375px) {
-	.signup-image-wrapper img{
-		height: 105% !important;
-	}
-	.signup-content {
-		height: 100% !important;
-	}
-	.signup-options {
-		margin-block: 3rem !important;
-	}
-	.signup-btn-wrapper {
-		display: flex;
-		flex-wrap: wrap;
-		gap: 1rem !important;
-	}
-}
-@media only screen and (max-width: 360px) {
-	.signup-image-wrapper img {
-		height: 95% !important;
-	}
-}
-@media only screen and (max-width: 280px) {
-	.signup-image-wrapper img {
-		height: 120% !important;
-	}
+.btn-div button a img{
+    background-color: #FFFDFD !important;
+    outline: 2px solid #FFFDFD !important;
 }
