--- a/CSS/mentee-dashboard-1.css
+++ b/CSS/mentee-dashboard-1.css
@@ -20,7 +20,7 @@
 .sidebar{
     background-color: #CAF0F8;
     width: 20%;
-    height: 103vh !important;
+    height: 245vh !important;
 }
 
 a{
@@ -33,15 +33,28 @@ a{
 .settings-icon{
     width: 15%;
 }
-.home-content span , hr{
-    color: #00B4D8;
-}
+
 hr{
-    border: 1px solid #0F0E0E;
+    color: #00B4D8;
+    border: 2px solid #00B4D8;
 }
+/* .btn-hr{
+    border: 1px solid #FFF;
+} */
 h5 , .num-p{
     color: #00B4D8;
 }
 .btn-2 , .btn-2:hover{
-    background-color: #0077B6;
+    background-color: #00B4D8;
+}
+
+.col{
+    width: 20% !important;
+    
+}
+.col-2{
+    width: 25% !important;
+}
+.overlay img{
+    height: 55vh !important;
 }
