--- a/CSS/index.css
+++ b/CSS/index.css
@@ -99,6 +99,13 @@ nav ul li ul li a:hover {
     top: 80%;
     right: 0;
 }
+.dropdown {
+    display: none;
+	gap: 1rem;
+    position: absolute;
+    top: 80%;
+    right: 20;
+}
 
 .dropdown-button {
     background-color: #0077b6;
@@ -526,6 +533,124 @@ form button {
 	margin-top: 6rem;
 	margin-bottom: 3rem;
 }
+
+
+/* chatbot */
+
+
+
+.toggle-div{
+    background-color: #007bff;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    z-index: 5;
+}
+button#toggleChatButton {
+    margin: 20px;
+    padding: 8px;
+    background-color: #dcf8c6;
+    border: none;
+    color: black;
+    cursor: pointer;
+}
+
+.chat-container {
+    display: none;
+    max-width: 375px;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    background-color: #f5f5f5;
+    border-radius: 16px;
+    overflow: hidden;
+    position: fixed;
+    bottom: 17%;
+    right: 10px;
+}
+
+.chat-header {
+    border-radius: 16px 16px 0px 0px;
+    background-color: rgba(0, 180, 216, 0.50);
+    color: #fff;
+    padding: 10px;
+    text-align: start;
+}
+
+.chat-area {
+    padding: 10px;
+    max-height: 300px;
+    overflow-y: auto;
+}
+
+.message {
+    padding: 8px;
+    border-radius: 10px;
+    max-width: 70%;
+    margin: 10px;
+}
+.chat-area p{
+    background-color: #CAF0F8;
+    padding: 8px;
+    border-radius: 10px;
+    max-width: 70%;
+}
+.user {
+    background-color: #00B4D8;
+    float: right;
+	width: 50%;
+}
+
+.bot {
+    background-color: #CAF0F8;
+    float: left;
+}
+
+.input-container {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #fff;
+	
+}
+
+.input-container input[type="text"] {
+    flex: 1;
+    padding: 10px;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+    border-radius: 16px;
+    outline: none;
+	color: black;
+}
+
+button#sendMessageButton {
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+button#closeChatButton {
+    background: none;
+    border: none;
+    cursor: pointer;
+    float: right;
+    color: #fff;
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+
+
+
+
+
+
+
+
 /* footer */
 /* footer */
 
